--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ BASE_URL="https://mixermarble-storechariot-8080.codio-box.uk"
 CLIENT_ID="r2PdTrjZoDcOYLEiV7Budpa3OyQcK5vm"
 ISSUER_BASE_URL="https://christopher-lee.eu.auth0.com"
 CLIENT_SECRET="r2PdTrjZoDcOYLEiV7Budpa3OyQcK5vm"
+MONGO_PASSWORD="testing123"
