switched nickname to be username

--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ CLIENT_ID="r2PdTrjZoDcOYLEiV7Budpa3OyQcK5vm"
 ISSUER_BASE_URL="https://christopher-lee.eu.auth0.com"
 CLIENT_SECRET="r2PdTrjZoDcOYLEiV7Budpa3OyQcK5vm"
 MONGO_PASSWORD="testing123"
+AUDIENCE="https://christopher-lee.eu.auth0.com/api/v2/"
